--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,9 @@
     <string name="temp">%1$s °</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="apprequiresexternal">This app requires access to External storage</string>
+    <string name="exstoragepermission">"External storage permission"</string>
+    <string name="askme">Ask me</string>
+    <string name="notme">Not now</string>
+    <string name="welcome">Welcome..</string>
 </resources>
